extract bot into separate package
* add jsdoc to types
* cleanup example bot

--- a/apps/example-bot/compose.yaml
+++ b/apps/example-bot/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: signald/signald
     volumes:
       - signald:/signald
-  socket:
+  tcp-relay:
     image: alpine/socat
     depends_on:
       - signald
