--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@signald-node/example-bot",
+  "name": "@signald-node/bot",
   "version": "0.0.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
-  "private": true,
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "license": "MIT",
   "scripts": {
-    "build": "tsup index.ts",
-    "dev": "tsup index.ts --watch  --onSuccess 'node dist/index.js'",
+    "build": "tsup index.ts --format cjs,esm --dts",
+    "dev": "npm run build -- --watch",
     "lint": "tsc"
   },
   "devDependencies": {
@@ -17,7 +17,6 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
-    "@signald-node/bot": "workspace:*",
     "@signald-node/client": "workspace:*",
     "@signald-node/protocol": "workspace:*"
   }
