--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@signald-node/client",
+  "name": "@signald/client",
   "version": "0.0.1",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
@@ -18,6 +18,6 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
-    "@signald-node/protocol": "workspace:*"
+    "@signald/protocol": "workspace:*"
   }
 }
