--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@signald-node/protocol",
+  "name": "@signald/protocol",
   "version": "0.0.0",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
