--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Build packages
+        run: pnpm build
+
       - name: Run lint
         run: pnpm lint
 
